[package]
name = "setproxy"
version = "0.1.0"
description = "Windows 系统代理管理工具"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.50"